--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,18 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+node_modules/
+logs/
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+tests.js
+config.test
+config.json
+config.test.jsonc
+config.jsonc
+.DS_Store
+.idea/
+test_*.js
+errcase.py
+error.list
+jsconfig.json
+balances.out
+trade/tests/debug_trader.js
+client.py
+test_encode.py
